# MessageApplication

./: .gitignore  README.md  deploy_local.conf  donkey.com  ngrok.yml  push
backend/: .env  pyproject.toml  test.db  tree.py
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/auth/: routes.py  utils.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.scss  App.tsx
frontend/src/api/: api.ts
frontend/src/components/: HomePage.module.scss  HomePage.tsx
frontend/src/components/FriendList/: FriendList.module.scss  FriendList.tsx
frontend/src/components/buttons/: Button.module.scss  Button.tsx  ToggleButton.module.scss  ToggleButton.tsx
frontend/src/components/chatWindow/: ChatWindow.module.scss  ChatWindow.tsx
frontend/src/components/communitypage/: CommunityPage.module.scss  CommunityPage.tsx  GroupListPage.tsx  UserSearchPage.tsx
frontend/src/components/login/: LoginForm.module.scss  LoginForm.tsx  LoginPage.module.scss  LoginPage.tsx
frontend/src/components/logout/: Logout.module.scss  Logout.tsx
frontend/src/components/signup/: SignupForm.module.scss  SignupForm.tsx
frontend/src/components/usersSearch/: UsersSearch.module.scss  UsersSearch.tsx
frontend/src/contexts/: AuthContext.tsx  FriendContext.tsx
frontend/src/hooks/: LoginHook.ts  styleHooks.ts
nextjsfronend/: package.json  pnpm-lock.yaml
nextjsfronend/src/app/homepage/: ClientComponent.tsx  page.tsx
serveo/: serveo.conf
src/components/login/: LoginPage.tsx
